@@ -4,6 +4,10 @@ NOTE: Please place changes under the version that will be released next.
 
 ************************* Version 8.01an: *********************************
 
+IMP/MAN (11/12/04, JKG) Added command Tool->Network->List Total Wire Lengths on All Networks
+
+IMP/MAN (11/12/04, JKG) Added command Tool->Logical Effort->Back Annotate Wire Lengths
+
 IMP: (11/12/04, SMR) Solid opaque layers no longer obscure text.
 
 BUG: (11/12/04, SMR) Deleting an export may delete the node.
